# ai-agents-skills

./: .gitattributes  .gitignore  Makefile  README.md  SPEC.md  make.bat  pyproject.toml
docs/: agent-locations.md  architecture.md  artifacts.md  audit-and-migration.md  dependencies.md  installation.md  linux.md  local-library-profiles.md  multi-agent-examples.md  openclaw-install-target-plan.md  profiles.md  requirements.txt  skills.md  submission-venue-selector-plan.md  surfaces.md  system-profile.md  troubleshooting.md  uninstall-rollback.md  verification.md  windows.md  workflow-overview.md
installer/: __init__.py  bootstrap.sh  bootstrap_windows.ps1
manifest/: artifacts.yaml  delegation.yaml  dependencies.yaml  profiles.yaml  runtime.yaml  skills.yaml  system-dependencies.yaml
tasks/: grok-install-target-plan.md  plan.md  todo.md  u2s-impl-review-findings.md  u2s-option-a-spec.md  u2s-plan-review-findings.md  u2s-plan-under-review.md  u2s-ssrf-interception-fix.md
tests/: test_antigravity_fixup.py  test_autonomous_research_loop.py  test_classroom50_skill.py  test_course_management_skills.py  test_cross_agent_delegation.py  test_discovery.py  test_docling_runtime.py  test_fanout_research_compute.py  test_getscipapers_requester_runtime.py  test_goal_priority.py  test_hetzner_research_compute.py  test_import_canonical_skills.py  test_installer.py  test_json_merge.py  test_kaggle_research_compute.py  test_lean_axle_adapter.py  test_lean_formalization_intake.py  test_lean_static_artifacts.py  test_lean_strict_verification_gate.py  test_library_profiles.py  (+43 more)
(+567 files in other folders)
